* formatted single-line plugins supported
* RelatedChanges plugin: only those which are links at the current page
* new GoogleLink pref: add "[G]" lookup on unknown links
* added chinese language support, by Yan-ren Tsai (druryl)
* added missing MacOSX buttons, by Carsten Klapp.
* new Crao theme from http://wiki.crao.net, by Arnaud Fontaine and Laurent Lunati

1.3.9-p1 May,5 2004, Reini Urban:

Bugfix patch for the following 1.3.9 problems:

* Default permissions not honored. Everybody was able to edit.
* set UserPreferences for bool and int fixed
* dba open problems improved
* session transportation improved, no db objects stored
* php-4.0.6 support re-enabled (superglobals, array_key_exists)
* WikiAdminRemove deleted too many if args passed from WikiAdminSelect
* PageGroup support for [links] and subpages
* disabled default dba sessions, broken!
* HttpClient fixes for older php's
* RssFeed for allow_url_fopen=false, IMAGE support, empty ITEM list

1.2.4 (the old-stable version) May, 4 2004, Reini Urban:
* improves possible deadlocks in DBA, 
* fixes problems with DBA open failures.

1.2.3 (the old-stable version) Apr, 29 2004, Reini Urban:
* added the most popular footer for dba
* added remove for dba
* fixed a warning on info page

1.3.9 Apr, 12 2004, Reini Urban:

Bugfix release for the following 1.3.8 problems:

* syntax errors in lib/plugin/UpLoad.php
* syntax errors in lib/plugin/WikiAdminRemove.php
* syntax error in schemas/mysql.sql
* several path issues (cannot findfile...), which were caused 
  by a chdir for bindtextdomain in lib/config.php.
    Failed opening required 'lib/stdlib.php', 
    templates/html.tmpl: not found, and more
* added self-registration for DbPassUser
* added GoTo plugin, RateIt action page

1.3.8 Jan-Apr 2004, Reini Urban:

External plugable authentification, DB prefs and sessions, 
some more fixes, docs, themes and plugins.

* new WikiUserNew class (after a kick in the ass by Carsten Klapp), 