@@ -57,6 +57,7 @@ new:
 * added chinese language support, by Yan-ren Tsai (druryl)
 * added missing MacOSX buttons, by Carsten Klapp.
 * new Crao theme from http://wiki.crao.net, by Arnaud Fontaine and Laurent Lunati
+* extended PhpWiki:InlineImages markup (size, border, ...)
 
 1.3.9-p1 May,5 2004, Reini Urban:
 
@@ -483,4 +484,4 @@ URL's.
 Prior to 0.02, there were no numbered releases, and in fact there
 was only one release, so I guess that would be 0.01 :-)
 
-$Id: HISTORY,v 1.8 2004-05-13 13:48:34 rurban Exp $
+$Id: HISTORY,v 1.9 2004-05-14 11:32:51 rurban Exp $
